adding express route handler

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 node_modules/*
 .vscode
 .vscode/*
-node-json-file-tree-*.tgz
+shaman-website-compiler-*.tgz
 dist/**/*.spec.js 
 dist/**/*.spec.js.map
 .coveralls.yml
