--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shaman-website-compiler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scripts/index.js",
   "scripts": {
     "start": "tsc && node scripts/index.js",
     "build": "tsc",
