--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "fast-glob": "2.0.4",
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
-    "promise": "^8.0.1",
-    "rxjs": "5.5.6"
+    "promise": "^8.0.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.0",
