--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fast-glob": "2.0.4",
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
-    "promise": "^8.0.1"
+    "promise": "^8.0.1",
+    "uglify-es": "^3.3.9"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.0",
