--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clean-css": "^4.1.9",
     "fast-glob": "2.0.4",
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
