--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shaman-website-compiler",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Generate website scaffolding in seconds. Compile to output with the CLI or compile to Express JS routes with Node JS. Built with SEO in mind.",
   "main": "scripts/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "clean-css": "^4.1.9",
     "fast-glob": "2.0.4",
     "fs-extra": "^5.0.0",
+    "gaze": "^1.1.2",
     "handlebars": "^4.0.11",
     "promise": "^8.0.1",
     "uglify-es": "^3.3.9"
