--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^5.0.0",
     "gaze": "^1.1.2",
     "handlebars": "^4.0.11",
+    "node-object-hash": "1.3.0",
     "promise": "^8.0.1",
     "uglify-es": "^3.3.9"
   },
