--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shaman-website-compiler",
-  "version": "2.0.9",
+  "version": "2.1.0",
   "description": "Generate website scaffolding in seconds. Compile to output with the CLI or compile to Express JS routes with Node JS. Built with SEO in mind.",
   "main": "scripts/index.js",
   "scripts": {
@@ -14,28 +14,28 @@
   "author": "Kyle Brown",
   "license": "ISC",
   "dependencies": {
-    "clean-css": "^4.1.9",
-    "fast-glob": "2.0.4",
-    "fs-extra": "^5.0.0",
-    "gaze": "^1.1.2",
-    "handlebars": "^4.0.11",
-    "node-object-hash": "1.3.0",
-    "promise": "^8.0.1",
-    "uglify-es": "^3.3.9"
+    "clean-css": "^4.1.11",
+    "fast-glob": "2.2.2",
+    "fs-extra": "7.0.0",
+    "gaze": "1.1.3",
+    "handlebars": "4.0.11",
+    "node-object-hash": "1.4.1",
+    "promise": "8.0.1",
+    "uglify-es": "3.3.9"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.0",
-    "@types/jasmine": "^2.8.2",
+    "@types/fs-extra": "5.0.4",
+    "@types/jasmine": "2.8.8",
     "@types/node": "^8.0.53",
-    "jasmine": "^2.8.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "1.5.0",
-    "karma-coverage": "^1.1.1",
-    "karma-coveralls": "^1.1.2",
-    "karma-jasmine": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.4",
+    "jasmine": "3.1.0",
+    "jasmine-core": "3.1.0",
+    "karma": "2.0.5",
+    "karma-coverage": "1.1.2",
+    "karma-coveralls": "2.0.0",
+    "karma-jasmine": "1.1.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-spec-reporter": "0.0.32",
-    "karma-typescript": "^3.0.9",
+    "karma-typescript": "3.0.13",
     "typescript": "^2.6.1"
   }
 }
