--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shaman-website-compiler",
-  "version": "4.0.4",
-  "description": "Build high-quality websites with minimal effort. Just start designing!",
+  "version": "4.0.5",
+  "description": "Compile raw HTML, CSS and Javascript into the smallest possible, SEO friendly website.",
   "main": "dist/index.js",
   "typings": "public_api.d.ts",
   "private": true,
