--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inversify": "^5.0.1",
     "json-repo": "^1.2.2",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "sitemap": "^6.3.2",
