--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shaman-website-compiler",
-  "version": "4.0.23",
+  "version": "4.0.24",
   "description": "Compile raw HTML, CSS and Javascript into the smallest possible, SEO friendly website.",
   "main": "dist/index.js",
   "typings": "public_api.d.ts",
@@ -13,40 +13,40 @@
   "author": "Kyle Brown",
   "license": "ISC",
   "dependencies": {
-    "clean-css": "^4.2.3",
-    "fast-glob": "^3.2.4",
-    "fs-extra": "^9.0.1",
+    "clean-css": "^5.2.2",
+    "fast-glob": "^3.2.11",
+    "fs-extra": "^10.0.0",
     "gaze": "^1.1.3",
     "handlebars": "^4.7.7",
     "html-minifier": "^4.0.0",
-    "inversify": "^5.0.1",
-    "json-repo": "^1.2.2",
+    "inversify": "^6.0.1",
+    "json-repo": "^1.2.4",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "mongodb": "^3.6.2",
+    "moment-timezone": "^0.5.34",
+    "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
-    "sitemap": "^6.3.2",
+    "sitemap": "^7.1.0",
     "uglify-es": "^3.3.9",
-    "upath": "2.0.0"
+    "upath": "^2.0.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/clean-css": "4.2.2",
-    "@types/fs-extra": "^9.0.2",
-    "@types/html-minifier": "4.0.0",
-    "@types/mocha": "^8.0.3",
-    "@types/mongodb": "^3.5.31",
-    "@types/node": "^14.14.2",
-    "@types/sinon": "9.0.8",
+    "@types/chai": "^4.3.0",
+    "@types/clean-css": "^4.2.5",
+    "@types/fs-extra": "^9.0.13",
+    "@types/html-minifier": "^4.0.2",
+    "@types/mocha": "^9.1.0",
+    "@types/mongodb": "^3.6.20",
+    "@types/node": "^14.18.9",
+    "@types/sinon": "10.0.8",
     "@types/uglify-es": "3.0.0",
-    "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
-    "mocha": "^8.2.0",
+    "chai": "^4.3.4",
+    "coveralls": "^3.1.1",
+    "mocha": "^9.1.4",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.0",
-    "ts-auto-mock": "^2.6.5",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "sinon": "^12.0.1",
+    "ts-auto-mock": "^3.5.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "nyc": {
     "extension": [
